  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in preparation
		       of major releases (optional)

-----------------------------------------------------------------------

??0?2003 (v2.2.4)  -** stable release **-
	- note: verified to compile ok with gcc-3.3
	- changed: to avoid resampling faults, upper limit of 2000%
		   set for pitchshifter's (-ei) shift-% arg; note! high
		   values of shift-% can still cause crashes if using 
		   libsamplerate
	- changed: if available, use pthread API for setting scheduler 
		   params; might improve real-time reliability on 
		   rh9.0 machines and others that have NPTL
	- changed: pyecasound - redefined configure option 
		   --enable-pyecasound=IMPL where 'IMPL' is either
		   'c' or 'python'; --disable-pyecasound disables 
		   them both
	- changed: pyecasound - if ecasound's build prefix does not
		   match the python prefix, /usr or /usr/local, 
 		   pyecasound will be disabled; you can override 
		   this by specifying the python module directory 
		   explicitly with the --with-python-modules=DIR 
		   option
	- changed: JACK transport support code to the new API 
		   introduced in 0.76.1 and newer
	- fixed: use of the JACK transport API was never actually 
                 enabled in 2.2.3
	- fixed: .aiff/.snd/.au input/output was not working at all
  	 	 due to a typo in source code
	- fixed: a chain with a short input file could cause a nasty
 		 feedback loop if processed with certain effects 
		 and mixed with audio from other chains
	- fixed: ewf length and offset errors with sample rates 
		 different from default (usually 44.1kHz)
	- fixed: chainsetup samplerate incorrectly set with some
	 	 configurations; caused problems with -t:xxx and 
		 other functions related to chainsetup level position 
		 and length
	- fixed: serious bug in mixing down multiple chains with
 		 different number of channels to one output; audio 