@@ -97,6 +97,8 @@ void ECA_IAMODE_PARSER::register_commands_misc(void)
   (*cmd_map_repp)["debug"] = ec_debug;
 
   (*cmd_map_repp)["engine-status"] = ec_engine_status;
+  (*cmd_map_repp)["engine-start"] = ec_engine_start;
+
   (*cmd_map_repp)["status"] = ec_cs_status;
   (*cmd_map_repp)["st"] = ec_cs_status;
   (*cmd_map_repp)["cs"] = ec_c_status;
@@ -370,6 +372,7 @@ bool ECA_IAMODE_PARSER::action_requires_params(int id)
 bool ECA_IAMODE_PARSER::action_requires_connected(int id)
 {
   switch(id) {
+  case ec_engine_start:
   case ec_start:
   case ec_run:
 
@@ -586,6 +589,7 @@ void show_controller_help(void)
   mitem << "\n'rewind time-in-seconds', 'rw time-in-seconds' - Rewind";
   mitem << "\n'forward time-in-seconds', 'fw time-in-seconds' - Forward";
   mitem << "\n'setpos time-in-seconds' - Sets the current position to 'time-in-seconds' seconds from the beginning.";
+  mitem << "\n'engine-start' - Initialize and start engine";
   mitem << "\n'engine-status' - Engine status";
   mitem << "\n'cs-status', 'st' - Chainsetup status";
   mitem << "\n'c-status', 'cs' - Chain status";
