@@ -16,6 +16,7 @@ class ECA_IAMODE_PARSER_COMMANDS {
     ec_debug,
     // --
     ec_engine_status,
+    ec_engine_start,
     // --
     ec_cs_add,
     ec_cs_remove,
