@@ -15,6 +15,9 @@ About the version numbers... "vX.Y[.Z][-extraT]" :
 
 ??0?2003 (v2.2.4)  -** stable release **-
 	- note: verified to compile ok with gcc-3.3
+	- added: eaim - command 'engine-start' to inialize engine
+		 without starting actual processing; useful with
+		 JACK transport functions
 	- changed: to avoid resampling faults, upper limit of 2000%
 		   set for pitchshifter's (-ei) shift-% arg; note! high
 		   values of shift-% can still cause crashes if using 
@@ -34,6 +37,8 @@ About the version numbers... "vX.Y[.Z][-extraT]" :
 		   option
 	- changed: JACK transport support code to the new API 
 		   introduced in 0.76.1 and newer
+	- changed: JACK transport modes redefined; new modes are 
+		   'notransport', 'send', 'recv' and 'sendrecv'
 	- fixed: use of the JACK transport API was never actually 
                  enabled in 2.2.3
 	- fixed: .aiff/.snd/.au input/output was not working at all
